@@ -1,1 +1,0 @@
-// This file can be overridden by some plugin to adapt the default Orthanc Explorer
